objects/CCA2_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CCA2_Application__r.Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCA2_Application__c</fullName>
        <label>CCA2_Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>CCA2_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCA2_Question__c</fullName>
        <label>CCA2_Question</label>
        <referenceTo>CCA2_Question__c</referenceTo>
        <relationshipName>CCA2_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <label>Gate</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Sequence__c</fullName>
        <formula>CCA2_Question__r.Sequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEST_ANSWER__c</fullName>
        <formula>Answer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEST ANSWER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CCA2_Application__c</columns>
        <columns>CCA2_Question__c</columns>
        <columns>Answer_Text__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>unassigned_CCA2_Response</fullName>
        <filterScope>Queue</filterScope>
        <label>unassigned</label>
        <queue>unassigned</queue>
    </listViews>
    <nameField>
        <displayFormat>RESP-{0}</displayFormat>
        <label>CCA2_Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>